--- a/UnitTestLayer/UnitTestLayer.csproj
+++ b/UnitTestLayer/UnitTestLayer.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ProductListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj">
