--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -40,10 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbConnect.designer.cs">
+    <Compile Include="Balder.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DbConnect.dbml</DependentUpon>
+      <DependentUpon>Balder.dbml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -51,12 +51,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="UserDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="DbConnect.dbml">
+    <None Include="Balder.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DbConnect.designer.cs</LastGenOutput>
+      <LastGenOutput>Balder.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Settings.settings">
@@ -68,8 +69,8 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DbConnect.dbml.layout">
-      <DependentUpon>DbConnect.dbml</DependentUpon>
+    <None Include="Balder.dbml.layout">
+      <DependentUpon>Balder.dbml</DependentUpon>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
